# cpp-template-lpf

./: CMakeLists.txt  Doxyfile  LICENSE  LockInAmplifier.cpp  LockInAmplifierCollection.cpp  README.md  README_RockyLinuxDependencies.md  README_RockyLinuxDocs.md  conanfile.txt
.github/workflows/: ci.yml
configured_files/: config.hpp.in
matlab_scripts/: LowPassFilterDesign.m  compareFilterToReference.m  generateFreqSweep.asv  generateFreqSweep.m  generateLockInAmplifierSignals.m  generateMultipleLIASignals.m  lowPassFilterDesign.m  plottingDataRobinsonLPF.m  spectralPowerAndFrequency.m  testLIA.m  testMultipleLIA.m
old_files/: CMakeLists.txt  DataConfig.hpp  LpfConfig.hpp
old_files/src/: low_pass_filter.cpp  main.cpp
src/: CMakeLists.txt  LpfConfig.hpp  low_pass_filter.cpp  low_pass_filter.hpp  main.cpp
src/lock_in_amplifier/: CMakeLists.txt  LIA_main.cpp  LockInAmplifier.cpp  LockInAmplifier.hpp  LockInAmplifierCollection.cpp  LockInAmplifierCollection.hpp  lock_in_amplifier.cpp  lock_in_amplifier.hpp
src/low_pass_filter/: CMakeLists.txt  LowPassFilter.cpp  LowPassFilter.hpp  lpf_test.cpp
src/meta_data_reader/: CMakeLists.txt  meta_data_reader.cpp  meta_data_reader.hpp
src/readers_and_writers/: BlockReader.cpp  BlockReader.hpp  BlockWriter.cpp  BlockWriter.hpp  CMakeLists.txt  filterCoefficientReader.cpp  filterCoefficientReader.hpp
test/: CMakeLists.txt  testConfig.hpp.in
test/block_reader_writer/: CMakeLists.txt  test.cpp
test/lock_in_amplifier/: CMakeLists.txt  test.cpp
test/lock_in_amplifier_collection/: CMakeLists.txt  test.cpp
test/low_pass_filter/: CMakeLists.txt  matlab_test.cpp  test.cpp
test/meta_data_reader/: CMakeLists.txt  test.cpp
test_data/: LIA_input.txt  chirp_signal.txt  filter_coefficients.txt  metaDataTest
